vm/src/vm/CymbolParser.java
// Generated from D:/workspace/soul_virtual_machine\Cymbol.g4 by ANTLR 4.5.1
package vm;

import org.antlr.v4.runtime.dfa.DFA;

import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class CymbolParser extends Parser {
    public static final int
            T__0 = 1, T__1 = 2, T__2 = 3, T__3 = 4, T__4 = 5, T__5 = 6, T__6 = 7, T__7 = 8, T__8 = 9,
            T__9 = 10, MUL = 11, DIV = 12, ADD = 13, SUB = 14, NOT = 15, IF = 16, GT = 17, LT = 18,
            RETURN = 19, ID = 20, NUMBER = 21, WS = 22, SL_COMMENT = 23;
    public static final int
            RULE_prog = 0, RULE_funDecl = 1, RULE_parameterList = 2, RULE_block = 3,
            RULE_stmtList = 4, RULE_stmt = 5, RULE_ifStmt = 6, RULE_whileStmt = 7,
            RULE_stat = 8, RULE_expr = 9, RULE_exprList = 10;
    public static final String[] ruleNames = {
            "prog", "funDecl", "parameterList", "block", "stmtList", "stmt", "ifStmt",
            "whileStmt", "stat", "expr", "exprList"
    };
    /**
     * @deprecated Use {@link #VOCABULARY} instead.
     */
    @Deprecated
    public static final String[] tokenNames;
    public static final ATN _ATN =
            new ATNDeserializer().deserialize(_serializedATN.toCharArray());
    protected static final DFA[] _decisionToDFA;
    protected static final PredictionContextCache _sharedContextCache =
            new PredictionContextCache();
    private static final String[] _LITERAL_NAMES = {
            null, "'('", "')'", "','", "'{'", "'}'", "';'", "'else'", "'while'", "'='",
            "'=='", "'*'", "'/'", "'+'", "'-'", "'!'", "'if'", "'>'", "'<'", "'return'"
    };
    private static final String[] _SYMBOLIC_NAMES = {
            null, null, null, null, null, null, null, null, null, null, null, "MUL",
            "DIV", "ADD", "SUB", "NOT", "IF", "GT", "LT", "RETURN", "ID", "NUMBER",
            "WS", "SL_COMMENT"
    };
    public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

    static {
        RuntimeMetaData.checkVersion("4.5.1", RuntimeMetaData.VERSION);
    }

    static {
        tokenNames = new String[_SYMBOLIC_NAMES.length];
        for (int i = 0; i < tokenNames.length; i++) {
            tokenNames[i] = VOCABULARY.getLiteralName(i);
            if (tokenNames[i] == null) {
                tokenNames[i] = VOCABULARY.getSymbolicName(i);
            }

            if (tokenNames[i] == null) {
                tokenNames[i] = "<INVALID>";
            }
        }
    }

    static {
        _decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
        for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
            _decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
        }
    }

    public CymbolParser(TokenStream input) {
        super(input);
        _interp = new ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
    }

    @Override
    @Deprecated
    public String[] getTokenNames() {
        return tokenNames;
    }

    @Override

    public Vocabulary getVocabulary() {
        return VOCABULARY;
    }

    @Override
    public String getGrammarFileName() {
        return "Cymbol.g4";
    }

    @Override
    public String[] getRuleNames() {
        return ruleNames;
    }

    @Override
    public String getSerializedATN() {
        return _serializedATN;
    }

    @Override
    public ATN getATN() {
        return _ATN;
    }

    public final ProgContext prog() throws RecognitionException {
        ProgContext _localctx = new ProgContext(_ctx, getState());
        enterRule(_localctx, 0, RULE_prog);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(23);
                _errHandler.sync(this);
                _la = _input.LA(1);
                do {
                    {
                        {
                            setState(22);
                            funDecl();
                        }
                    }
                    setState(25);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                } while (_la == ID);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final FunDeclContext funDecl() throws RecognitionException {
        FunDeclContext _localctx = new FunDeclContext(_ctx, getState());
        enterRule(_localctx, 2, RULE_funDecl);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(27);
                ((FunDeclContext) _localctx).funName = match(ID);
                setState(28);
                match(T__0);
                setState(29);
                parameterList();
                setState(30);
                match(T__1);
                setState(31);
                ((FunDeclContext) _localctx).funBlock = block();
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final ParameterListContext parameterList() throws RecognitionException {
        ParameterListContext _localctx = new ParameterListContext(_ctx, getState());
        enterRule(_localctx, 4, RULE_parameterList);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(41);
                _la = _input.LA(1);
                if (_la == ID) {
                    {
                        setState(33);
                        match(ID);
                        setState(38);
                        _errHandler.sync(this);
                        _la = _input.LA(1);
                        while (_la == T__2) {
                            {
                                {
                                    setState(34);
                                    match(T__2);
                                    setState(35);
                                    match(ID);
                                }
                            }
                            setState(40);
                            _errHandler.sync(this);
                            _la = _input.LA(1);
                        }
                    }
                }

            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final BlockContext block() throws RecognitionException {
        BlockContext _localctx = new BlockContext(_ctx, getState());
        enterRule(_localctx, 6, RULE_block);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(43);
                match(T__3);
                setState(44);
                stmtList();
                setState(45);
                match(T__4);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final StmtListContext stmtList() throws RecognitionException {
        StmtListContext _localctx = new StmtListContext(_ctx, getState());
        enterRule(_localctx, 8, RULE_stmtList);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(50);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__3) | (1L << T__7) | (1L << SUB) | (1L << NOT) | (1L << IF) | (1L << RETURN) | (1L << ID) | (1L << NUMBER))) != 0)) {
                    {
                        {
                            setState(47);
                            stmt();
                        }
                    }
                    setState(52);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final StmtContext stmt() throws RecognitionException {
        StmtContext _localctx = new StmtContext(_ctx, getState());
        enterRule(_localctx, 10, RULE_stmt);
        try {
            setState(72);
            switch (getInterpreter().adaptivePredict(_input, 4, _ctx)) {
                case 1:
                    enterOuterAlt(_localctx, 1);
                {
                    setState(53);
                    match(RETURN);
                    setState(54);
                    expr(0);
                    setState(55);
                    match(T__5);
                }
                break;
                case 2:
                    enterOuterAlt(_localctx, 2);
                {
                    setState(57);
                    match(RETURN);
                    setState(58);
                    stat();
                    setState(59);
                    match(T__5);
                }
                break;
                case 3:
                    enterOuterAlt(_localctx, 3);
                {
                    setState(61);
                    ifStmt();
                }
                break;
                case 4:
                    enterOuterAlt(_localctx, 4);
                {
                    setState(62);
                    expr(0);
                    setState(63);
                    match(T__5);
                }
                break;
                case 5:
                    enterOuterAlt(_localctx, 5);
                {
                    setState(65);
                    whileStmt();
                    setState(66);
                    match(T__5);
                }
                break;
                case 6:
                    enterOuterAlt(_localctx, 6);
                {
                    setState(68);
                    block();
                }
                break;
                case 7:
                    enterOuterAlt(_localctx, 7);
                {
                    setState(69);
                    stat();
                    setState(70);
                    match(T__5);
                }
                break;
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final IfStmtContext ifStmt() throws RecognitionException {
        IfStmtContext _localctx = new IfStmtContext(_ctx, getState());
        enterRule(_localctx, 12, RULE_ifStmt);
        try {
            setState(88);
            switch (getInterpreter().adaptivePredict(_input, 5, _ctx)) {
                case 1:
                    enterOuterAlt(_localctx, 1);
                {
                    setState(74);
                    match(IF);
                    setState(75);
                    match(T__0);
                    setState(76);
                    expr(0);
                    setState(77);
                    match(T__1);
                    setState(78);
                    ((IfStmtContext) _localctx).case1 = stmt();
                    setState(79);
                    match(T__6);
                    setState(80);
                    ((IfStmtContext) _localctx).case2 = stmt();
                }
                break;
                case 2:
                    enterOuterAlt(_localctx, 2);
                {
                    setState(82);
                    match(IF);
                    setState(83);
                    match(T__0);
                    setState(84);
                    expr(0);
                    setState(85);
                    match(T__1);
                    setState(86);
                    ((IfStmtContext) _localctx).case1 = stmt();
                }
                break;
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final WhileStmtContext whileStmt() throws RecognitionException {
        WhileStmtContext _localctx = new WhileStmtContext(_ctx, getState());
        enterRule(_localctx, 14, RULE_whileStmt);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(90);
                match(T__7);
                setState(91);
                match(T__0);
                setState(92);
                expr(0);
                setState(93);
                match(T__1);
                setState(94);
                stmt();
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final StatContext stat() throws RecognitionException {
        StatContext _localctx = new StatContext(_ctx, getState());
        enterRule(_localctx, 16, RULE_stat);
        try {
            setState(104);
            switch (getInterpreter().adaptivePredict(_input, 6, _ctx)) {
                case 1:
                    _localctx = new AsnContext(_localctx);
                    enterOuterAlt(_localctx, 1);
                {
                    setState(96);
                    match(ID);
                    setState(97);
                    match(T__8);
                    setState(98);
                    expr(0);
                }
                break;
                case 2:
                    _localctx = new CallContext(_localctx);
                    enterOuterAlt(_localctx, 2);
                {
                    setState(99);
                    match(ID);
                    setState(100);
                    match(T__0);
                    setState(101);
                    exprList();
                    setState(102);
                    match(T__1);
                }
                break;
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final ExprContext expr() throws RecognitionException {
        return expr(0);
    }

    private ExprContext expr(int _p) throws RecognitionException {
        ParserRuleContext _parentctx = _ctx;
        int _parentState = getState();
        ExprContext _localctx = new ExprContext(_ctx, _parentState);
        ExprContext _prevctx = _localctx;
        int _startState = 18;
        enterRecursionRule(_localctx, 18, RULE_expr, _p);
        int _la;
        try {
            int _alt;
            enterOuterAlt(_localctx, 1);
            {
                setState(113);
                switch (_input.LA(1)) {
                    case SUB: {
                        _localctx = new NegateContext(_localctx);
                        _ctx = _localctx;
                        _prevctx = _localctx;

                        setState(107);
                        ((NegateContext) _localctx).op = match(SUB);
                        setState(108);
                        expr(8);
                    }
                    break;
                    case NOT: {
                        _localctx = new NotContext(_localctx);
                        _ctx = _localctx;
                        _prevctx = _localctx;
                        setState(109);
                        ((NotContext) _localctx).op = match(NOT);
                        setState(110);
                        expr(7);
                    }
                    break;
                    case ID: {
                        _localctx = new VarContext(_localctx);
                        _ctx = _localctx;
                        _prevctx = _localctx;
                        setState(111);
                        match(ID);
                    }
                    break;
                    case NUMBER: {
                        _localctx = new NumberContext(_localctx);
                        _ctx = _localctx;
                        _prevctx = _localctx;
                        setState(112);
                        match(NUMBER);
                    }
                    break;
                    default:
                        throw new NoViableAltException(this);
                }
                _ctx.stop = _input.LT(-1);
                setState(129);
                _errHandler.sync(this);
                _alt = getInterpreter().adaptivePredict(_input, 9, _ctx);
                while (_alt != 2 && _alt != org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER) {
                    if (_alt == 1) {
                        if (_parseListeners != null) triggerExitRuleEvent();
                        _prevctx = _localctx;
                        {
                            setState(127);
                            switch (getInterpreter().adaptivePredict(_input, 8, _ctx)) {
                                case 1: {
                                    _localctx = new GtLtContext(new ExprContext(_parentctx, _parentState));
                                    pushNewRecursionContext(_localctx, _startState, RULE_expr);
                                    setState(115);
                                    if (!(precpred(_ctx, 6)))
                                        throw new FailedPredicateException(this, "precpred(_ctx, 6)");
                                    setState(116);
                                    ((GtLtContext) _localctx).op = _input.LT(1);
                                    _la = _input.LA(1);
                                    if (!(_la == GT || _la == LT)) {
                                        ((GtLtContext) _localctx).op = (Token) _errHandler.recoverInline(this);
                                    } else {
                                        consume();
                                    }
                                    setState(117);
                                    expr(7);
                                }
                                break;
                                case 2: {
                                    _localctx = new MulDivContext(new ExprContext(_parentctx, _parentState));
                                    pushNewRecursionContext(_localctx, _startState, RULE_expr);
                                    setState(118);
                                    if (!(precpred(_ctx, 5)))
                                        throw new FailedPredicateException(this, "precpred(_ctx, 5)");
                                    setState(119);
                                    ((MulDivContext) _localctx).op = _input.LT(1);
                                    _la = _input.LA(1);
                                    if (!(_la == MUL || _la == DIV)) {
                                        ((MulDivContext) _localctx).op = (Token) _errHandler.recoverInline(this);
                                    } else {
                                        consume();
                                    }
                                    setState(120);
                                    expr(6);
                                }
                                break;
                                case 3: {
                                    _localctx = new AddSubContext(new ExprContext(_parentctx, _parentState));
                                    pushNewRecursionContext(_localctx, _startState, RULE_expr);
                                    setState(121);
                                    if (!(precpred(_ctx, 4)))
                                        throw new FailedPredicateException(this, "precpred(_ctx, 4)");
                                    setState(122);
                                    ((AddSubContext) _localctx).op = _input.LT(1);
                                    _la = _input.LA(1);
                                    if (!(_la == ADD || _la == SUB)) {
                                        ((AddSubContext) _localctx).op = (Token) _errHandler.recoverInline(this);
                                    } else {
                                        consume();
                                    }
                                    setState(123);
                                    expr(5);
                                }
                                break;
                                case 4: {
                                    _localctx = new EqualContext(new ExprContext(_parentctx, _parentState));
                                    pushNewRecursionContext(_localctx, _startState, RULE_expr);
                                    setState(124);
                                    if (!(precpred(_ctx, 3)))
                                        throw new FailedPredicateException(this, "precpred(_ctx, 3)");
                                    setState(125);
                                    ((EqualContext) _localctx).op = match(T__9);
                                    setState(126);
                                    expr(4);
                                }
                                break;
                            }
                        }
                    }
                    setState(131);
                    _errHandler.sync(this);
                    _alt = getInterpreter().adaptivePredict(_input, 9, _ctx);
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            unrollRecursionContexts(_parentctx);
        }
        return _localctx;
    }

    public final ExprListContext exprList() throws RecognitionException {
        ExprListContext _localctx = new ExprListContext(_ctx, getState());
        enterRule(_localctx, 20, RULE_exprList);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(140);
                _la = _input.LA(1);
                if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << SUB) | (1L << NOT) | (1L << ID) | (1L << NUMBER))) != 0)) {
                    {
                        setState(132);
                        expr(0);
                        setState(137);
                        _errHandler.sync(this);
                        _la = _input.LA(1);
                        while (_la == T__2) {
                            {
                                {
                                    setState(133);
                                    match(T__2);
                                    setState(134);
                                    expr(0);
                                }
                            }
                            setState(139);
                            _errHandler.sync(this);
                            _la = _input.LA(1);
                        }
                    }
                }

            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public boolean sempred(RuleContext _localctx, int ruleIndex, int predIndex) {
        switch (ruleIndex) {
            case 9:
                return expr_sempred((ExprContext) _localctx, predIndex);
        }
        return true;
    }

    private boolean expr_sempred(ExprContext _localctx, int predIndex) {
        switch (predIndex) {
            case 0:
                return precpred(_ctx, 6);
            case 1:
                return precpred(_ctx, 5);
            case 2:
                return precpred(_ctx, 4);
            case 3:
                return precpred(_ctx, 3);
        }
        return true;
    }

    public static class ProgContext extends ParserRuleContext {
        public ProgContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        public List<FunDeclContext> funDecl() {
            return getRuleContexts(FunDeclContext.class);
        }

        public FunDeclContext funDecl(int i) {
            return getRuleContext(FunDeclContext.class, i);
        }

        @Override
        public int getRuleIndex() {
            return RULE_prog;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof CymbolListener) ((CymbolListener) listener).enterProg(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof CymbolListener) ((CymbolListener) listener).exitProg(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof CymbolVisitor) return ((CymbolVisitor<? extends T>) visitor).visitProg(this);
            else return visitor.visitChildren(this);
        }
    }

    public static class FunDeclContext extends ParserRuleContext {
        public Token funName;
        public BlockContext funBlock;

        public FunDeclContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        public ParameterListContext parameterList() {
            return getRuleContext(ParameterListContext.class, 0);
        }

        public TerminalNode ID() {
            return getToken(CymbolParser.ID, 0);
        }

        public BlockContext block() {
            return getRuleContext(BlockContext.class, 0);
        }

        @Override
        public int getRuleIndex() {
            return RULE_funDecl;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof CymbolListener) ((CymbolListener) listener).enterFunDecl(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof CymbolListener) ((CymbolListener) listener).exitFunDecl(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof CymbolVisitor) return ((CymbolVisitor<? extends T>) visitor).visitFunDecl(this);
            else return visitor.visitChildren(this);
        }
    }

    public static class ParameterListContext extends ParserRuleContext {
        public ParameterListContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        public List<TerminalNode> ID() {
            return getTokens(CymbolParser.ID);
        }

        public TerminalNode ID(int i) {
            return getToken(CymbolParser.ID, i);
        }

        @Override
        public int getRuleIndex() {
            return RULE_parameterList;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof CymbolListener) ((CymbolListener) listener).enterParameterList(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof CymbolListener) ((CymbolListener) listener).exitParameterList(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof CymbolVisitor)
                return ((CymbolVisitor<? extends T>) visitor).visitParameterList(this);
            else return visitor.visitChildren(this);
        }
    }

    public static class BlockContext extends ParserRuleContext {
        public BlockContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        public StmtListContext stmtList() {
            return getRuleContext(StmtListContext.class, 0);
        }

        @Override
        public int getRuleIndex() {
            return RULE_block;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof CymbolListener) ((CymbolListener) listener).enterBlock(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof CymbolListener) ((CymbolListener) listener).exitBlock(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof CymbolVisitor) return ((CymbolVisitor<? extends T>) visitor).visitBlock(this);
            else return visitor.visitChildren(this);
        }
    }

    public static class StmtListContext extends ParserRuleContext {
        public StmtListContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        public List<StmtContext> stmt() {
            return getRuleContexts(StmtContext.class);
        }

        public StmtContext stmt(int i) {
            return getRuleContext(StmtContext.class, i);
        }

        @Override
        public int getRuleIndex() {
            return RULE_stmtList;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof CymbolListener) ((CymbolListener) listener).enterStmtList(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof CymbolListener) ((CymbolListener) listener).exitStmtList(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof CymbolVisitor) return ((CymbolVisitor<? extends T>) visitor).visitStmtList(this);
            else return visitor.visitChildren(this);
        }
    }

    public static class StmtContext extends ParserRuleContext {
        public StmtContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        public TerminalNode RETURN() {
            return getToken(CymbolParser.RETURN, 0);
        }

        public ExprContext expr() {
            return getRuleContext(ExprContext.class, 0);
        }

        public StatContext stat() {
            return getRuleContext(StatContext.class, 0);
        }

        public IfStmtContext ifStmt() {
            return getRuleContext(IfStmtContext.class, 0);
        }

        public WhileStmtContext whileStmt() {
            return getRuleContext(WhileStmtContext.class, 0);
        }

        public BlockContext block() {
            return getRuleContext(BlockContext.class, 0);
        }

        @Override
        public int getRuleIndex() {
            return RULE_stmt;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof CymbolListener) ((CymbolListener) listener).enterStmt(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof CymbolListener) ((CymbolListener) listener).exitStmt(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof CymbolVisitor) return ((CymbolVisitor<? extends T>) visitor).visitStmt(this);
            else return visitor.visitChildren(this);
        }
    }

    public static class IfStmtContext extends ParserRuleContext {
        public StmtContext case1;
        public StmtContext case2;

        public IfStmtContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        public TerminalNode IF() {
            return getToken(CymbolParser.IF, 0);
        }

        public ExprContext expr() {
            return getRuleContext(ExprContext.class, 0);
        }

        public List<StmtContext> stmt() {
            return getRuleContexts(StmtContext.class);
        }

        public StmtContext stmt(int i) {
            return getRuleContext(StmtContext.class, i);
        }

        @Override
        public int getRuleIndex() {
            return RULE_ifStmt;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof CymbolListener) ((CymbolListener) listener).enterIfStmt(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof CymbolListener) ((CymbolListener) listener).exitIfStmt(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof CymbolVisitor) return ((CymbolVisitor<? extends T>) visitor).visitIfStmt(this);
            else return visitor.visitChildren(this);
        }
    }

    public static class WhileStmtContext extends ParserRuleContext {
        public WhileStmtContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        public ExprContext expr() {
            return getRuleContext(ExprContext.class, 0);
        }

        public StmtContext stmt() {
            return getRuleContext(StmtContext.class, 0);
        }

        @Override
        public int getRuleIndex() {
            return RULE_whileStmt;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof CymbolListener) ((CymbolListener) listener).enterWhileStmt(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof CymbolListener) ((CymbolListener) listener).exitWhileStmt(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof CymbolVisitor) return ((CymbolVisitor<? extends T>) visitor).visitWhileStmt(this);
            else return visitor.visitChildren(this);
        }
    }

    public static class StatContext extends ParserRuleContext {
        public StatContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        public StatContext() {
        }

        @Override
        public int getRuleIndex() {
            return RULE_stat;
        }

        public void copyFrom(StatContext ctx) {
            super.copyFrom(ctx);
        }
    }

    public static class CallContext extends StatContext {
        public CallContext(StatContext ctx) {
            copyFrom(ctx);
        }

        public TerminalNode ID() {
            return getToken(CymbolParser.ID, 0);
        }

        public ExprListContext exprList() {
            return getRuleContext(ExprListContext.class, 0);
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof CymbolListener) ((CymbolListener) listener).enterCall(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof CymbolListener) ((CymbolListener) listener).exitCall(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof CymbolVisitor) return ((CymbolVisitor<? extends T>) visitor).visitCall(this);
            else return visitor.visitChildren(this);
        }
    }

    public static class AsnContext extends StatContext {
        public AsnContext(StatContext ctx) {
            copyFrom(ctx);
        }

        public TerminalNode ID() {
            return getToken(CymbolParser.ID, 0);
        }

        public ExprContext expr() {
            return getRuleContext(ExprContext.class, 0);
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof CymbolListener) ((CymbolListener) listener).enterAsn(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof CymbolListener) ((CymbolListener) listener).exitAsn(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof CymbolVisitor) return ((CymbolVisitor<? extends T>) visitor).visitAsn(this);
            else return visitor.visitChildren(this);
        }
    }

    public static class ExprContext extends ParserRuleContext {
        public ExprContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        public ExprContext() {
        }

        @Override
        public int getRuleIndex() {
            return RULE_expr;
        }

        public void copyFrom(ExprContext ctx) {
            super.copyFrom(ctx);
        }
    }

    public static class NotContext extends ExprContext {
        public Token op;

        public NotContext(ExprContext ctx) {
            copyFrom(ctx);
        }

        public ExprContext expr() {
            return getRuleContext(ExprContext.class, 0);
        }

        public TerminalNode NOT() {
            return getToken(CymbolParser.NOT, 0);
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof CymbolListener) ((CymbolListener) listener).enterNot(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof CymbolListener) ((CymbolListener) listener).exitNot(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof CymbolVisitor) return ((CymbolVisitor<? extends T>) visitor).visitNot(this);
            else return visitor.visitChildren(this);
        }
    }

    public static class NumberContext extends ExprContext {
        public NumberContext(ExprContext ctx) {
            copyFrom(ctx);
        }

        public TerminalNode NUMBER() {
            return getToken(CymbolParser.NUMBER, 0);
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof CymbolListener) ((CymbolListener) listener).enterNumber(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof CymbolListener) ((CymbolListener) listener).exitNumber(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof CymbolVisitor) return ((CymbolVisitor<? extends T>) visitor).visitNumber(this);
            else return visitor.visitChildren(this);
        }
    }

    public static class MulDivContext extends ExprContext {
        public Token op;

        public MulDivContext(ExprContext ctx) {
            copyFrom(ctx);
        }

        public List<ExprContext> expr() {
            return getRuleContexts(ExprContext.class);
        }

        public ExprContext expr(int i) {
            return getRuleContext(ExprContext.class, i);
        }

        public TerminalNode MUL() {
            return getToken(CymbolParser.MUL, 0);
        }

        public TerminalNode DIV() {
            return getToken(CymbolParser.DIV, 0);
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof CymbolListener) ((CymbolListener) listener).enterMulDiv(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof CymbolListener) ((CymbolListener) listener).exitMulDiv(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof CymbolVisitor) return ((CymbolVisitor<? extends T>) visitor).visitMulDiv(this);
            else return visitor.visitChildren(this);
        }
    }
